force-app/main/default/objects/Error__c/Error__c.object-meta.xml
<CustomObject>
    <description>This is used to store error logs in code</description>
    <label>Error</label>
    <nameField>
        <label>Error Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>