force-app/main/default/objects/Error__c/fields/API_Request__c.field-meta.xml
<CustomField>
    <fullName>API_Request__c</fullName>
    <label>API Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>