force-app/main/default/objects/Error__c/fields/API_Response__c.field-meta.xml
<CustomField>
    <fullName>API_Response__c</fullName>
    <label>API Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>