force-app/main/default/objects/Error__c/fields/Error_Trace__c.field-meta.xml
<CustomField>
    <fullName>Error_Trace__c</fullName>
    <label>Error Trace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>