force-app/main/default/objects/Error__c/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <label>Error Type</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>